fixed user.js
